--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+# Answer Sheet
 chardet==5.2.0
 colorama==0.4.6
 pillow==11.1.0
 qrcode==8.0
 reportlab==4.3.1
+
+# Sheet OMR
+imutils==0.5.4
+numpy==2.2.4
+opencv-python==4.11.0.86
+scipy==1.15.2
